Use Java 21 in GitHub Actions